src/objects/Warrantyproduct__c.object
<CustomObject>
    <fields>
        <fullName>CoustomerID__c</fullName>
        <formula>Equipment__r.customer__c</formula>
        <label>#客户ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoustomerStage__c</fullName>
        <formula>Equipment__r.CustomerGrade__c</formula>
        <label>#客户等级</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <formula>Equipment__r.CustomerName__c</formula>
        <label>#客户名字</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>设备序列号</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>合约产品</relationshipLabel>
        <relationshipName>sBw2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>产品类别</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>准分子设备</fullName>
                    <default>true</default>
                    <label>准分子设备</label>
                </value>
                <value>
                    <fullName>欧堡设备</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OwnManage__c</fullName>
        <formula>Equipment__r.OwnManage__c</formula>
        <label>#设备第二责任人Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snnumber__c</fullName>
        <formula>Equipment__r.Name</formula>
        <label>SN号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <label>合约</label>
        <referenceTo>Warranty__c</referenceTo>
        <relationshipLabel>合约产品</relationshipLabel>
        <relationshipName>tfsT</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Warrantyenddate__c</fullName>
        <label>保修结束日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warrantystartdate__c</fullName>
        <label>保修开始日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WhetherCreatePolling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否生成巡检</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isocp__c</fullName>
        <formula>Equipment__r.isocp__c</formula>
        <label>是否有OCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ispresbytism__c</fullName>
        <formula>Equipment__r.ispresbytism__c</formula>
        <label>是否有老视</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isvideo__c</fullName>
        <formula>Equipment__r.isvideo__c</formula>
        <label>是否有摄录像</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lasercavitynumber__c</fullName>
        <formula>Equipment__r.lasercavitynumber__c</formula>
        <label>激光腔脉冲数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lasercavitytype__c</fullName>
        <formula>Equipment__r.lasercavitytype__c</formula>
        <label>激光腔型号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>virsionnumber__c</fullName>
        <formula>Equipment__r.virsionnumber__c</formula>
        <label>版本号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>warrantytype__c</fullName>
        <formula>TEXT(Equipment__r.warrantytype__c )</formula>
        <label>#设备保修类型</label>
        <type>Text</type>
    </fields>
    <label>合约产品</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Warranty__c</columns>
        <columns>CustomerName__c</columns>
        <columns>Field1__c</columns>
        <columns>Equipment__c</columns>
        <columns>Warrantystartdate__c</columns>
        <columns>Warrantyenddate__c</columns>
        <columns>warrantytype__c</columns>
        <columns>isocp__c</columns>
        <columns>ispresbytism__c</columns>
        <columns>isvideo__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <listViews>
        <fullName>OPTOS</fullName>
        <columns>CREATED_DATE</columns>
        <columns>CustomerName__c</columns>
        <columns>Field1__c</columns>
        <columns>Equipment__c</columns>
        <columns>Warrantystartdate__c</columns>
        <columns>Warrantyenddate__c</columns>
        <columns>warrantytype__c</columns>
        <columns>Warranty__c</columns>
        <columns>isocp__c</columns>
        <columns>ispresbytism__c</columns>
        <columns>isvideo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field1__c</field>
            <operation>equals</operation>
            <value>欧堡设备</value>
        </filters>
        <label>欧堡设备</label>
    </listViews>
    <listViews>
        <fullName>SCHWIND</fullName>
        <columns>CREATED_DATE</columns>
        <columns>CustomerName__c</columns>
        <columns>Field1__c</columns>
        <columns>Equipment__c</columns>
        <columns>Warrantystartdate__c</columns>
        <columns>Warrantyenddate__c</columns>
        <columns>Warranty__c</columns>
        <columns>warrantytype__c</columns>
        <columns>isocp__c</columns>
        <columns>ispresbytism__c</columns>
        <columns>isvideo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field1__c</field>
            <operation>equals</operation>
            <value>准分子设备</value>
        </filters>
        <label>准分子设备</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>序号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>合约产品</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DateSize</fullName>
        <active>true</active>
        <description>保修结束日期需要大于保修开始日期</description>
        <errorConditionFormula>Warrantystartdate__c  &gt;  Warrantyenddate__c</errorConditionFormula>
        <errorMessage>保修结束日期需要大于保修开始日期</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Whethergeneratetheinspectioncondition</fullName>
        <active>true</active>
        <description>选择生成巡检复选框时，需要保修结束日期，保修开始日期都不为空，而且为全保设备</description>
        <errorConditionFormula>WhetherCreatePolling__c  &amp;&amp;   ( ISNULL( Warrantyenddate__c ) ||   ISNULL( Warrantystartdate__c )  ||  NOT( warrantytype__c =&apos;设备合同-保修&apos; || warrantytype__c =&apos;售后合同-全保&apos;)  )</errorConditionFormula>
        <errorMessage>选择生成巡检复选框时，需要保修结束日期，保修开始日期都不为空，而且为全保设备</errorMessage>
    </validationRules>
</CustomObject>